lustre/utils/liblustreapi_root.c
@@ -47,6 +47,7 @@
 #include <sys/sysmacros.h> /* for makedev() */
 #include <sys/types.h>
 #include <unistd.h>
+#include <assert.h>
 
 #include <libcfs/util/ioctl.h>
 #include <lustre/lustreapi.h>
@@ -210,6 +211,11 @@ static int get_root_path_slow(int want, char *fsname, int *outfd, char *path,
 
 		fsnamelen = ptr_end - ptr;
 
+		/* avoid stat/statx call if path does not match mountpoint */
+		if (path && (strlen(path) >= mntlen) &&
+		    (strncmp(mnt.mnt_dir, path, mntlen) != 0))
+			continue;
+
 		/* ignore unaccessible filesystem */
 		if (get_file_dev(mnt.mnt_dir, &devmnt))
 			continue;
@@ -233,10 +239,11 @@ static int get_root_path_slow(int want, char *fsname, int *outfd, char *path,
 			break;
 		}
 
-		/* Otherwise find the longest matching path */
-		if (path && strlen(path) >= mntlen &&
-		    (strncmp(mnt.mnt_dir, path, mntlen) == 0) &&
-		    (strlen(path) == mntlen || path[mntlen] == '/')) {
+		/*
+		 * Otherwise find the longest matching path beginning of path
+		 * and mnt_dir already verified to be the same.
+		 */
+		if (path && (strlen(path) == mntlen || path[mntlen] == '/')) {
 			rc = 0;
 			break;
 		}
@@ -311,6 +318,8 @@ int get_root_path(int want, char *fsname, int *outfd, char *path, int index,
 		  dev_t *dev, char *nid)
 {
 	int rc = -ENODEV;
+
+	assert(fsname || path);
 
 	if (!(want & WANT_INDEX))
 		rc = get_root_path_fast(want, fsname, outfd, path, dev, nid);
